--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,18 @@ body {
     box-shadow: 0 4px 6px rgba(145, 97, 255, 0.4); /* Adiciona uma sombra mais intensa */
 }
 
+.noticias5 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.noticias5 article {
+    width: 100%;
+}
+
+.noticias5 article img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
